NIFI-16379 Restore GenerateFlowFile non-unique generation and batch write behavior (#11711)